src/test/deca/context/valid/created/print_strings.deca
// Description :
// Affiche deux chaines de caractères
//
// Resultats :
// OK (Resultat dans synt)

{
    print("Hello ", "world");
}