src/test/deca/context/invalid/created/affichage/print_boolean.deca
// Description:
//  Affiche boolean
// 
// Resultats:
//    Ligne 8 : Error expr should be Int, Float or String

{
    print(true, false);
}